Starting desktop version

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 
         <header>
             <p>Produtos</p>
-            <div class="conjunto">
-                <h1 class="apple">Apple</h1>
-                <img class="icon" src="./src/icon apple.png" alt="logo apple">
-            </div>
+            <h1>Apple</h1>
         </header>
         
         <main>
